  * Move binaries to lib subdirectory and link are created from binary package.

2013-03-10  6.8.3-10 Cristy  <quetzlzacatenango@image...>
  * The TXT image format can now generate output compatible with the
    -sparse-color option (e.g. -define txt:sparse-color=true txt:-).
  * Support -intensity option: method to generate an intensity value from a
    pixel.

2013-03-10  6.8.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-9, SVN revision 11294.

2013-03-09  6.8.3-9 Cristy  <quetzlzacatenango@image...>
  * Add a space after the LastPage option in coders/ps.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22940).

2013-03-08  6.8.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-8, SVN revision 11283.

2013-03-05  6.8.3-8 Cristy  <quetzlzacatenango@image...>
  * GIF comments are no longer displaced by 1 for animated GIFs (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22901).
  * A blur kernel with a zero sigma is unity.

2013-03-03  6.8.3-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-7, SVN revision 11249.

2013-03-02  6.8.3-7 Glenn Randers-Pehrson <glennrp@image...>
  * Do not replace gAMA found in input with 1/2.2
  * Avoid a libpng16 warning about storing unknown chunks.

2013-03-01  6.8.3-7 Cristy  <quetzlzacatenango@image...>
  * Improve performance when rendering a caption.
  * The compare 'map' image should not be transparent.
  * Use only major version for decorating include path.

2013-02-28  6.8.3-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-6, SVN revision 11210.

2013-02-25  6.8.3-6 Cristy  <quetzlzacatenango@image...>
   * Support built-in 1x1 and 2x1 threshold maps (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22861).
   * Check for webp version (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22867).

2013-02-25  6.8.3-6 Glenn Randers-Pehrson <glennrp@image...>