@@ -327,6 +327,8 @@ static const OptionInfo
     { "-display", 1L, ImageInfoOptionFlag | DrawInfoOptionFlag, MagickFalse },
     { "+dispose", 0L, ImageInfoOptionFlag, MagickFalse },
     { "-dispose", 1L, ImageInfoOptionFlag, MagickFalse },
+    { "+dissimilarity-threshold", 0L, NonConvertOptionFlag | ImageInfoOptionFlag, MagickFalse },
+    { "-dissimilarity-threshold", 1L, NonConvertOptionFlag | ImageInfoOptionFlag, MagickFalse },
     { "+dissolve", 0L, NonConvertOptionFlag, MagickFalse },
     { "-dissolve", 1L, NonConvertOptionFlag, MagickFalse },
     { "+distort", 2L, SimpleOperatorOptionFlag, MagickFalse },
@@ -633,6 +635,8 @@ static const OptionInfo
     { "-sigmoidal-contrast", 1L, SimpleOperatorOptionFlag, MagickFalse },
     { "+silent", 0L, NonConvertOptionFlag, MagickFalse },
     { "-silent", 1L, NonConvertOptionFlag, MagickFalse },
+    { "+similarity-threshold", 0L, NonConvertOptionFlag | ImageInfoOptionFlag, MagickFalse },
+    { "-similarity-threshold", 1L, NonConvertOptionFlag | ImageInfoOptionFlag, MagickFalse },
     { "+size", 0L, ImageInfoOptionFlag, MagickFalse },
     { "-size", 1L, ImageInfoOptionFlag, MagickFalse },
     { "+sketch", 1L, DeprecateOptionFlag, MagickFalse },
